[gd_scene load_steps=3 format=3 uid="uid://dpq4m7xqf9pe"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://djx4s1234abcd" path="res://scenes/ui/save_load_dialog.tscn" id="2"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SaveButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SAVE GAME"

[node name="LoadButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LOAD GAME"

[node name="ResumeButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RESUME (ESC)"

[node name="ExitButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EXIT TO MENU"

[node name="SaveLoadDialog" parent="." instance=ExtResource("2")]
z_index = 10
